--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
 </head>
 <body>
-    <h1>etsmoas en mi casa</h1>
-    <p>no soy el propietario , soy pobre</p>
+    <h1 class="text-center" style="color:blue">nba</h1>
     <main class="container">
         {{ content }}
     </main>
